# mellophone

./: .gitmodules  README.md  meson.build
include/: CD.hpp  Database.hpp  FLACTrack.hpp  Library.hpp  Track.hpp  VorbisTrack.hpp  mellophone.hpp
src/: meson.build
src/cd-import/: CD.cpp  CD.hpp  meson.build
src/database/: Database.cpp  Database.hpp  db_init.sql  meson.build  sql2cstring.py  sqlite_init.h
src/media-engine/: FLACTrack.cpp  FLACTrack.hpp  Library.cpp  Library.hpp  README.md  Track.cpp  Track.hpp
test/: meson.build
test/cd-import/: CDTest.cpp  meson.build
test/database/: DatabaseTest.cpp  meson.build
test/media-engine/: FLACTrackTest.cpp  LibraryTest.cpp  meson.build
